--- a/sections/custom-gallery.liquid
+++ b/sections/custom-gallery.liquid
@@ -23,7 +23,7 @@
           </div>
         </div>
         <div class="grid__item sixth-twelfths">
-          <div class="gellery-image-five media-wrapper">
+          <div class="gallery-image-five media-wrapper">
             <img class="media lazyload"
             {%- render 'lazysizes', img: section.blocks[4].settings.image, img_type: 'responsive' -%}>
           </div>
