--- a/sections/custom-gallery.liquid
+++ b/sections/custom-gallery.liquid
@@ -16,13 +16,13 @@
         {%- render 'lazysizes', img: section.blocks[2].settings.image, img_type: 'responsive' -%}>
       </div>
       <div class="grid">
-        <div class="grid__item sixth-twelfths">
+        <div class="grid__item small--sixth-twelfths sixth-twelfths">
           <div class="gallery-image-four media-wrapper">
             <img class="media lazyload"
             {%- render 'lazysizes', img: section.blocks[3].settings.image, img_type: 'responsive' -%}>
           </div>
         </div>
-        <div class="grid__item sixth-twelfths">
+        <div class="grid__item small--sixth-twelfths sixth-twelfths">
           <div class="gallery-image-five media-wrapper">
             <img class="media lazyload"
             {%- render 'lazysizes', img: section.blocks[4].settings.image, img_type: 'responsive' -%}>
