Swapped the order of styling.

--- a/sections/custom-gallery.liquid
+++ b/sections/custom-gallery.liquid
@@ -2,13 +2,13 @@
   <div class="grid">
     <div class="grid__item medium--four-twelfths large--four-twelfths custom-gallery-column first-column">
       <div class="grid">
-        <div class="grid__item small--six-twelfths medium--one-whole">
+        <div class="grid__item  one-whole small--six-twelfths">
           <div class="gallery-image-one media-wrapper">
             <img class="media lazyload"
             {%- render 'lazysizes', img: section.blocks[0].settings.image, img_type: 'responsive' -%}>
           </div>
         </div>
-        <div class="grid__item small--six-twelfths medium--one-whole">
+        <div class="grid__item one-whole small--six-twelfths">
           <div class="gallery-image-two media-wrapper">
             <img class="media lazyload"
             {%- render 'lazysizes', img: section.blocks[1].settings.image, img_type: 'responsive' -%}>
