featured_image experiment

--- a/sections/custom-gallery.liquid
+++ b/sections/custom-gallery.liquid
@@ -5,7 +5,7 @@
         <div class="grid__item  one-whole small--six-twelfths">
           <div class="gallery-image-one media-wrapper">
             <img class="media lazyload"
-            {%- render 'lazysizes', img: section.blocks[0].settings.image, img_type: 'responsive' -%}>
+            {%- render 'lazysizes', img: product.featured_image, img_type: 'responsive' -%}>
           </div>
         </div>
         <div class="grid__item one-whole small--six-twelfths">
