--- a/sections/custom-gallery.liquid
+++ b/sections/custom-gallery.liquid
@@ -11,7 +11,7 @@
         <div class="grid__item one-whole small--six-twelfths">
           <div class="gallery-image-two media-wrapper">
             <img class="media lazyload"
-            {%- render 'lazysizes', img: section.blocks[1].settings.image, img_type: 'responsive' -%}>
+            {%- render 'lazysizes', img: product.featured_media, img_type: 'responsive' -%}>
           </div>
         </div>
       </div>
