--- a/sections/custom-gallery.liquid
+++ b/sections/custom-gallery.liquid
@@ -37,6 +37,11 @@
       </div>
     </div>
   </div>
+  <div>
+    {% for media in product.media %}
+  {% include 'media' %}
+{% endfor %}
+  </div>
 </div>
 
 {% style %}
