Accessing product description on product template.

--- a/templates/product.alpha.liquid
+++ b/templates/product.alpha.liquid
@@ -1,4 +1,5 @@
 <!-- /templates/product.liquid -->
+{{ product.description}}
 {%- section 'product-template-alpha' -%}
 
 {%- section 'featured-columns' -%}
