--- a/sections/custom-gallery.liquid
+++ b/sections/custom-gallery.liquid
@@ -5,13 +5,13 @@
         <div class="grid__item  one-whole small--six-twelfths">
           <div class="gallery-image-one media-wrapper">
             <img class="media lazyload"
-            {%- render 'lazysizes', img: product.featured_image, img_type: 'responsive' -%}>
+            {%- render 'lazysizes', img: section.blocks[0].settings.image, img_type: 'responsive' -%}>
           </div>
         </div>
         <div class="grid__item one-whole small--six-twelfths">
           <div class="gallery-image-two media-wrapper">
             <img class="media lazyload"
-            {%- render 'lazysizes', img: product.featured_media, img_type: 'responsive' -%}>
+            {%- render 'lazysizes', img: section.blocks[1].settings.image, img_type: 'responsive' -%}>
           </div>
         </div>
       </div>
@@ -36,11 +36,6 @@
         </div>
       </div>
     </div>
-  </div>
-  <div>
-    {% for media in product.media %}
-  {% include 'media' %}
-{% endfor %}
   </div>
 </div>
 
