--- a/sections/custom-gallery.liquid
+++ b/sections/custom-gallery.liquid
@@ -1,4 +1,5 @@
 <div id="section-{{ section.id }}" class="wrapper">
+  <h1>{{product.description[-1]}}</h1>
   <div class="grid">
     <div class="grid__item medium--four-twelfths large--four-twelfths custom-gallery-column first-column">
       <div class="grid">
