Added endif tag.

--- a/templates/product.alpha.liquid
+++ b/templates/product.alpha.liquid
@@ -3,6 +3,7 @@
   {%- assign description_array = product.description | split: '//'}
   {{ description_array }}
   <h1>Array test</h1>
+{%- endif -%}
 {%- section 'product-template-alpha'-%}
 
 {%- section 'featured-columns'-%}
