Passing product description_array to gallery snippet.

--- a/templates/product.alpha.liquid
+++ b/templates/product.alpha.liquid
@@ -12,7 +12,7 @@
 
 {%- section 'featured-content' -%}
 
-{%- section 'custom-gallery' -%}
+{%- section 'custom-gallery' with description_array as product.description -%}
 
 {%- section 'dbtfy-pricing-table' -%}
 
