Created a custom fatued columns

--- a/templates/product.alpha.liquid
+++ b/templates/product.alpha.liquid
@@ -6,13 +6,13 @@
 {%- endif -%}
 {%- section 'product-template-alpha'-%}
 
-{%- section 'featured-columns'-%}
+{%- section 'custom-highlights-section'-%}
 
 {%- section 'product-row' -%}
 
 {%- section 'featured-content' -%}
 
-{%- section 'custom-gallery' with description_array as product.description -%}
+{%- section 'custom-gallery' -%}
 
 {%- section 'dbtfy-pricing-table' -%}
 
