Featured-columns section name and default heading.

--- a/sections/custom-highlights-section.liquid
+++ b/sections/custom-highlights-section.liquid
@@ -71,7 +71,7 @@ Three columned image and text section, initially copied from featured-columns.li
 
 {% schema %}
   {
-    "name": "Text columns with images",
+    "name": "Product Highlights",
     "class": "featured-columns-section",
     "max_blocks": 4,
     "settings": [
@@ -79,7 +79,7 @@ Three columned image and text section, initially copied from featured-columns.li
         "type": "text",
         "id": "title",
         "label": "Heading",
-        "default": "Featured columns"
+        "default": "Highlights"
       },
 	    {
         "type": "text",
