Fixed the aspect ratio of highlights images.

--- a/sections/custom-highlights-section.liquid
+++ b/sections/custom-highlights-section.liquid
@@ -32,7 +32,7 @@ Three columned image and text section, initially copied from featured-columns.li
             <div class="grid__item {{ column_width }}" {{ block.shopify_attributes }}>
 
               {%- if block.settings.image != blank -%}
-                <div class="media-wrapper spacer-bottom" style="padding-top:{{ 1 | divided_by: block.settings.image.aspect_ratio | times: 100}}%;">
+                <div class="media-wrapper spacer-bottom" style="padding-top: 100%">
                   {%- unless block.settings.image_link == blank -%} 
                     <a href="{{ block.settings.image_link }}"><img class="media lazyload"
                     {%- render 'lazysizes', img: block.settings.image, img_type: 'responsive' -%}
@@ -68,6 +68,7 @@ Three columned image and text section, initially copied from featured-columns.li
     </div>
   </div>
 </div>
+
 
 {% schema %}
   {
