--- a/templates/product.alpha.liquid
+++ b/templates/product.alpha.liquid
@@ -1,12 +1,10 @@
 <!-- /templates/product.liquid -->
 {%- if product.description != blank -%}}
   {%- assign description_array = product.description | split: '//' -%}
-  {{ description_array }}
-  <h1>Array test</h1>
 {%- endif -%}
 {%- section 'product-template-alpha'-%}
 
-{%- section 'custom-highlights-section'-%}
+{%- section 'custom-highlights-section', description_array: description_array -%}
 
 {%- section 'product-row' -%}
 
