--- a/sections/custom-highlights-section.liquid
+++ b/sections/custom-highlights-section.liquid
@@ -20,7 +20,10 @@ Three columned image and text section, initially copied from featured-columns.li
         </div>
       {%- endunless -%}
 
-      <h1>{{ description_array[-1] }}</h1>
+      {%- if product.description != blank -%}}
+        {%- assign description_array = product.description | split: '//' -%}
+        {{ product.description[1] }}
+      {%- endif -%}
 
       {%- if section.blocks.size > 0 -%}
         <div class="grid grid-spacer {{ section.settings.text_align }}">
