--- a/sections/custom-highlights-section.liquid
+++ b/sections/custom-highlights-section.liquid
@@ -2,8 +2,9 @@
 Three columned image and text section, initially copied from featured-columns.liquid
 {%- endcomment -%}
 {%- if product.description != blank -%}
-  {%- assign highlights_array = product.description | split: '//' | slice: 1, 6 -%}
-  {{ highlights_array }}
+  {%- assign description_array = product.descrtiption | split: '//' -%}
+  {%- assign highlights_title_array = description_array | slice: 1, 3 -%}
+  {%- assign highlights_text_array = description_array | slice: 4, 6 -%}
 {%- endif -%}
 
 <div id="section-{{ section.id }}" class="{{ section.settings.section_style }}" data-section-id="{{ section.id }}" data-section-type="highlights-section">
@@ -33,7 +34,7 @@ Three columned image and text section, initially copied from featured-columns.li
           {%- endcapture -%}
 
           <!-- Blocks -->
-          {%- for block in section.blocks -%}
+          <!-- {%- for block in section.blocks -%}
             <div class="grid__item {{ column_width }}" {{ block.shopify_attributes }}>
 
               {%- if block.settings.image != blank -%}
@@ -64,7 +65,104 @@ Three columned image and text section, initially copied from featured-columns.li
                 </a></p>
               {%- endunless -%}
             </div>
-          {%- endfor -%}
+          {%- endfor -%} -->
+          
+          {%- if section.blocks.size = 3 -%}
+            {%- assign column_one = section.blocks[0] -%}
+            {%- assign column_two = section.blocks[1] -%}
+            {%- assign column_three = section.blocks[2] -%}
+
+            <div class="grid__item {{ column_width }}" {{ column_one.shopify_attributes }}>
+              {%- if column_one.settings.image != blank -%}
+                <div class="media-wrapper spacer-bottom" style="padding-top: 100%">
+                  {%- unless column_one.settings.image_link == blank -%} 
+                    <a href="{{ column_one.settings.image_link }}"><img class="media lazyload"
+                    {%- render 'lazysizes', img: column_one.settings.image, img_type: 'responsive' -%}
+                                                                    alt="{{ column_one.settings.image.alt }}"></a>
+                  {%- endunless -%}
+                  {%- if column_one.settings.image_link == blank -%}
+                    <img class="media lazyload"
+                    {%- render 'lazysizes', img: column_one.settings.image, img_type: 'responsive' -%}
+                                                                    alt="{{ column_one.settings.image.alt }}">
+                  {%- endif -%}
+                  
+                </div>
+              {%- elsif column_one.settings.icon != blank -%}
+                <span class="{{settings.icon}} icon-xl text-secondary" aria-hidden="true">{{column_one.settings.icon}}</span>
+              {%- else -%}
+                {{ 'image' | placeholder_svg_tag: 'placeholder-svg spacer-bottom' }}
+              {%- endif -%}
+
+              <h3 class="h4">{{ highlights_title_array[0] }}</h3>
+              <div class="rte">{{ highlights_text_array[0] }}</div>
+              {%- unless column_one.settings.button_label == blank -%}
+                <p><a href="{{ column_one.settings.image_link }}" class="btn btn--small {{ column_one.settings.button_style }}">
+                  {{ column_one.settings.button_label | escape }}
+                </a></p>
+              {%- endunless -%}
+            </div>
+
+            <div class="grid__item {{ column_width }}" {{ column_two.shopify_attributes }}>
+              {%- if column_two.settings.image != blank -%}
+                <div class="media-wrapper spacer-bottom" style="padding-top: 100%">
+                  {%- unless column_two.settings.image_link == blank -%} 
+                    <a href="{{ column_two.settings.image_link }}"><img class="media lazyload"
+                    {%- render 'lazysizes', img: column_two.settings.image, img_type: 'responsive' -%}
+                                                                    alt="{{ column_two.settings.image.alt }}"></a>
+                  {%- endunless -%}
+                  {%- if column_two.settings.image_link == blank -%}
+                    <img class="media lazyload"
+                    {%- render 'lazysizes', img: column_two.settings.image, img_type: 'responsive' -%}
+                                                                    alt="{{ column_two.settings.image.alt }}">
+                  {%- endif -%}
+                  
+                </div>
+              {%- elsif column_two.settings.icon != blank -%}
+                <span class="{{settings.icon}} icon-xl text-secondary" aria-hidden="true">{{column_two.settings.icon}}</span>
+              {%- else -%}
+                {{ 'image' | placeholder_svg_tag: 'placeholder-svg spacer-bottom' }}
+              {%- endif -%}
+
+              <h3 class="h4">{{ highlights_title_array[1] }}</h3>
+              <div class="rte">{{ highlights_text_array[1] }}</div>
+              {%- unless column_two.settings.button_label == blank -%}
+                <p><a href="{{ column_two.settings.image_link }}" class="btn btn--small {{ column_two.settings.button_style }}">
+                  {{ column_two.settings.button_label | escape }}
+                </a></p>
+              {%- endunless -%}
+            </div>
+
+            <div class="grid__item {{ column_width }}" {{ column_three.shopify_attributes }}>
+              {%- if column_three.settings.image != blank -%}
+                <div class="media-wrapper spacer-bottom" style="padding-top: 100%">
+                  {%- unless column_three.settings.image_link == blank -%} 
+                    <a href="{{ column_three.settings.image_link }}"><img class="media lazyload"
+                    {%- render 'lazysizes', img: column_three.settings.image, img_type: 'responsive' -%}
+                                                                    alt="{{ column_three.settings.image.alt }}"></a>
+                  {%- endunless -%}
+                  {%- if column_three.settings.image_link == blank -%}
+                    <img class="media lazyload"
+                    {%- render 'lazysizes', img: column_three.settings.image, img_type: 'responsive' -%}
+                                                                    alt="{{ column_three.settings.image.alt }}">
+                  {%- endif -%}
+                  
+                </div>
+              {%- elsif column_three.settings.icon != blank -%}
+                <span class="{{settings.icon}} icon-xl text-secondary" aria-hidden="true">{{column_three.settings.icon}}</span>
+              {%- else -%}
+                {{ 'image' | placeholder_svg_tag: 'placeholder-svg spacer-bottom' }}
+              {%- endif -%}
+
+              <h3 class="h4">{{ highlights_title_array[2] }}</h3>
+              <div class="rte">{{ highlights_text_array[2] }}</div>
+              {%- unless column_three.settings.button_label == blank -%}
+                <p><a href="{{ column_three.settings.image_link }}" class="btn btn--small {{ column_three.settings.button_style }}">
+                  {{ column_three.settings.button_label | escape }}
+                </a></p>
+              {%- endunless -%}
+            </div>
+          {%- endif -%}
+
         </div>
       {%- else -%}
         {%- render 'no-blocks' -%}
@@ -138,6 +236,14 @@ Three columned image and text section, initially copied from featured-columns.li
         "type": "text_block",
         "name": "Column",
         "settings": [
+          {
+            "type": "range",
+            "id": "column_number",
+            "label": "Column Number",
+            "min": 0,
+            "max": 2,
+            "step": 1,
+          }
 		      {
             "type": "image_picker",
             "id": "image",
