--- a/sections/custom-highlights-section.liquid
+++ b/sections/custom-highlights-section.liquid
@@ -67,7 +67,7 @@ Three columned image and text section, initially copied from featured-columns.li
             </div>
           {%- endfor -%} -->
           
-          {%- if section.blocks.size = 3 -%}
+          <!-- {%- if section.blocks.size = 3 -%}
             {%- assign column_one = section.blocks[0] -%}
             {%- assign column_two = section.blocks[1] -%}
             {%- assign column_three = section.blocks[2] -%}
@@ -161,7 +161,7 @@ Three columned image and text section, initially copied from featured-columns.li
                 </a></p>
               {%- endunless -%}
             </div>
-          {%- endif -%}
+          {%- endif -%} -->
 
         </div>
       {%- else -%}
