--- a/templates/product.alpha.liquid
+++ b/templates/product.alpha.liquid
@@ -2,7 +2,7 @@
 
 {%- section 'product-template-alpha'-%}
 
-{%- section 'custom-highlights-section' -%}
+<!-- {%- section 'custom-highlights-section' -%} -->
 
 {%- section 'product-row' -%}
 
