--- a/templates/product.alpha.liquid
+++ b/templates/product.alpha.liquid
@@ -2,6 +2,8 @@
 
 {%- section 'product-template-alpha'-%}
 
+{%- section 'custom-highlights-section' -%}
+
 {%- section 'product-row' -%}
 
 {%- section 'featured-content' -%}
