--- a/templates/product.backpack.liquid
+++ b/templates/product.backpack.liquid
@@ -1,6 +1,6 @@
 <!-- /templates/product.liquid -->
 
-{%- section 'product-template-alpha'-%}
+{%- section 'product-template_bivvy-fun'-%}
 
 {%- section 'featured-columns_backpack' -%}
 
