Added pouch waist bag template.

--- a/templates/product.pouch-waist-bag.liquid
+++ b/templates/product.pouch-waist-bag.liquid
@@ -1,11 +1,14 @@
 <!-- /templates/product.liquid -->
-{%- section 'product-template' -%}
 
-{%- section 'featured-video' -%}
+{%- section 'product-template_bivvy-fun'-%}
 
-{%- section "dbtfy-upsell-bundles" -%}
+{%- section 'featured-columns_pouch-waist-bag' -%}
 
-{%- section 'product-row' -%}
+{%- section 'product-row_pouch-waist-bag' -%}
+
+{%- section 'featured-content_pouch-waist-bag' -%}
+
+{%- section 'custom-gallery_pouch-waist-bag' -%}
 
 {%- section 'dbtfy-pricing-table' -%}
 
