Changed product section.

--- a/templates/product.alpha.liquid
+++ b/templates/product.alpha.liquid
@@ -1,6 +1,6 @@
 <!-- /templates/product.liquid -->
 
-{%- section 'product-template-alpha'-%}
+{%- section 'product-template_bivvy-fun'-%}
 
 {%- section 'custom-highlights-section' -%}
 
