Fixed including non-existing snippets error.

--- a/sections/product-template_bivvy-fun.liquid
+++ b/sections/product-template_bivvy-fun.liquid
@@ -10,7 +10,7 @@
      data-stacked-layout="{% if section.settings.media_layout == "stacked" %}true{% else %}false{% endif %}"
      data-product-selector="{{ section.settings.product_selector }}"
      {%- if first_3d_model -%}data-has-model="true"{%- endif -%}>
-  {%- render 'product-template-alpha' with product as product -%}
+  {%- render 'product-template_bivvy-fun' with product as product -%}
 </div>
 
 {% schema %}
