--- a/sections/featured-columns_digital-camouflage-jacket.liquid
+++ b/sections/featured-columns_digital-camouflage-jacket.liquid
@@ -68,7 +68,7 @@
 
 {% schema %}
   {
-    "name": "Text columns with images",
+    "name": "Highlights",
     "class": "featured-columns-section",
     "max_blocks": 4,
     "settings": [
@@ -76,7 +76,7 @@
         "type": "text",
         "id": "title",
         "label": "Heading",
-        "default": "Featured columns"
+        "default": "Highlights"
       },
 	    {
         "type": "text",
