--- a/sections/featured-content_backpack.liquid
+++ b/sections/featured-content_backpack.liquid
@@ -26,20 +26,19 @@
 
 {% schema %}
   {
-    "name": "Featured content",
+    "name": "Gallery Title",
     "class": "featured-content-section",
     "settings": [
       {
         "type": "text",
         "id": "title",
         "label": "Heading",
-        "default": "Featured content"
+        "default": "Gallery"
       },
       {
         "type": "richtext",
         "id": "text",
         "label": "Text",
-		    "default": "<p>Use this text to share information about your brand with your customers. Describe a product, share announcements, or welcome customers to your store.</p>"
       },
       {
         "type": "select",
