--- a/sections/product-row_digital-camouflage-jacket.liquid
+++ b/sections/product-row_digital-camouflage-jacket.liquid
@@ -84,7 +84,7 @@
 
 {%- schema -%}
   {
-    "name": "Image with text",
+    "name": "Descriptions and Specifications",
 	  "class": "product-row-section",
     "settings": [
       {
