--- a/sections/product-row_foldable-water-bag.liquid
+++ b/sections/product-row_foldable-water-bag.liquid
@@ -84,7 +84,7 @@
 
 {%- schema -%}
   {
-    "name": "Descriptions and Specifications",
+    "name": "Desriptions and Spec",
 	  "class": "product-row-section",
     "settings": [
       {
