Fixed JSON error.

--- a/sections/featured-content_backpack.liquid
+++ b/sections/featured-content_backpack.liquid
@@ -39,6 +39,7 @@
         "type": "richtext",
         "id": "text",
         "label": "Text",
+		    "default": ""
       },
       {
         "type": "select",
