--- a/sections/featured-content_backpack.liquid
+++ b/sections/featured-content_backpack.liquid
@@ -39,7 +39,7 @@
         "type": "richtext",
         "id": "text",
         "label": "Text",
-		    "default": "DELETE ME"
+		    "default": "<p>DELETE ME</p>"
       },
       {
         "type": "select",
