Fixed custom gallery image not showing issue.

--- a/snippets/product-template_bivvy-fun.liquid
+++ b/snippets/product-template_bivvy-fun.liquid
@@ -261,6 +261,13 @@
             </div>
             {%- endif -%}
 
+            {% comment %}
+              Testing review stars click takes to bottom sections scrolling
+            {% endcomment %}
+            <div style="color: red;">
+              <a href="HERE!!!!
+            </div>
+
             <div class="grid grid-xsmall flex-nowrap product-title-container">
               <div class="grid__item flex-fill">
                 <h1 class="product-single__title{% if section.settings.product_title_large %} page-title{% endif %}" itemprop="name">{{ title }}</h1>
