--- a/snippets/product-template_bivvy-fun.liquid
+++ b/snippets/product-template_bivvy-fun.liquid
@@ -265,7 +265,9 @@
               Testing review stars click takes to bottom sections scrolling
             {% endcomment %}
             <div style="color: red;">
-              <a href="HERE!!!!
+              <a href=".custom-gallery">
+                HERE!!!!
+              </a>
             </div>
 
             <div class="grid grid-xsmall flex-nowrap product-title-container">
