Hyperlink using id selector .

--- a/snippets/product-template_bivvy-fun.liquid
+++ b/snippets/product-template_bivvy-fun.liquid
@@ -265,7 +265,7 @@
               Testing review stars click takes to bottom sections scrolling
             {% endcomment %}
             <div style="color: red;">
-              <a href=".custom-gallery">
+              <a href="#gallery-grid">
                 HERE!!!!
               </a>
             </div>
