--- a/sections/custom-gallery_pouch-waist-bag.liquid
+++ b/sections/custom-gallery_pouch-waist-bag.liquid
@@ -1,5 +1,5 @@
 <div id="section-{{ section.id }}" class="wrapper">
-  <div class="grid">
+  <div id="gallery-grid" class="grid">
     <div class="grid__item medium--four-twelfths large--four-twelfths custom-gallery-column first-column">
       <div class="grid">
         <div class="grid__item  one-whole small--six-twelfths">
