--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -8193,3 +8193,6 @@ body:not(.dbtfy-product_image_crop-destroy) {
   }
 }
 /* end-dbtfy-collection-filters */
+html {
+  scroll-behavior: smooth;
+}
