Smooth scrolling in layout style tag.

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -128,6 +128,9 @@
         font-display: block;
         src: url({{ settings.icon | append: ".woff2" | asset_url }}) format("woff2");
       }
+      html {
+        scroll-behavior: smooth;
+      }
     </style>
 
     <!-- Theme strings and settings -->
