Set packed sleeping bag to the center.

--- a/sections/custom-gallery_mummy-goose-down-sleeping-bag.liquid
+++ b/sections/custom-gallery_mummy-goose-down-sleeping-bag.liquid
@@ -73,6 +73,11 @@
   }
   #shopify-section-custom-gallery_mummy-goose-down-sleeping-bag .gallery-image-two {
     padding-top: 150%;
+    position: relative;
+  }
+  #shopify-section-custom-gallery_mummy-goose-down-sleeping-bag .gallery-image-two img {
+    position: absolute;
+    left: -50%;
   }
   #shopify-section-custom-gallery_mummy-goose-down-sleeping-bag .gallery-image-four {
     padding-top: 150%;
