Centered gallery image 5 for desktop mode.

--- a/sections/custom-gallery_tent.liquid
+++ b/sections/custom-gallery_tent.liquid
@@ -57,6 +57,11 @@
 }
 #shopify-section-custom-gallery_tent .gallery-image-five {
   padding-top: 166%;
+  position: relative;
+}
+#shopify-section-custom-gallery_tent .gallery-image-five {
+  position: absolute;
+  left: -6%;
 }
 #shopify-section-custom-gallery_tent img {
   height: 100%; 
