Fixed a CSS bug

--- a/sections/custom-gallery_tent.liquid
+++ b/sections/custom-gallery_tent.liquid
@@ -59,7 +59,7 @@
   padding-top: 166%;
   position: relative;
 }
-#shopify-section-custom-gallery_tent .gallery-image-five {
+#shopify-section-custom-gallery_tent .gallery-image-five img {
   position: absolute;
   left: -6%;
 }
