Adjusted custom gallery image 1 position for the tent.

--- a/sections/custom-gallery_tent.liquid
+++ b/sections/custom-gallery_tent.liquid
@@ -45,6 +45,11 @@
 }
 #shopify-section-custom-gallery_tent .gallery-image-one {
   padding-top: 225%;
+  position: relative;
+}
+#shopify-section-custom-gallery_tent .gallery-image-one img {
+  position: absolute;
+  left: -20%;
 }
 #shopify-section-custom-gallery_tent .gallery-image-two {
   padding-top: 75%;
