Fixed styling for mobile mode.

--- a/sections/custom-gallery_tent.liquid
+++ b/sections/custom-gallery_tent.liquid
@@ -81,6 +81,9 @@
   #shopify-section-custom-gallery_tent .gallery-image-one {
     padding-top: 150%;
   }
+  #shopify-section-custom-gallery_tent .gallery-image-one img {
+    left: 0;
+  }
   #shopify-section-custom-gallery_tent .gallery-image-two {
     padding-top: 150%;
   }
