Product review anchor test.

--- a/snippets/product-template_bivvy-fun.liquid
+++ b/snippets/product-template_bivvy-fun.liquid
@@ -271,7 +271,7 @@
 
             {%- unless emptyState -%}
               <div>
-                <a href="#shopify-product-reviews">
+                <a href="#product-reviews-anchor">
                   {%- render "review-badge" with product as product, position: "product_page", class: "spacer-bottom" -%}
                 </a>
               </div>
