Hero title color to white.

--- a/sections/hero.liquid
+++ b/sections/hero.liquid
@@ -104,6 +104,7 @@
               font-family: {{ slideshow_font_stack }};
               font-weight: {{ slideshow_font_weight }};
               font-style: {{ slideshow_font_style }};
+              color: #FFFFFF;
             }
           </style>
         {%- endif -%}
