Hero title and text to white.

--- a/sections/hero.liquid
+++ b/sections/hero.liquid
@@ -104,6 +104,9 @@
               font-family: {{ slideshow_font_stack }};
               font-weight: {{ slideshow_font_weight }};
               font-style: {{ slideshow_font_style }};
+            }
+
+            .hero__title.h1, .hero__text {
               color: #FFFFFF;
             }
           </style>
