--- a/templates/customers/register.liquid
+++ b/templates/customers/register.liquid
@@ -70,6 +70,11 @@
                   checked="checked" />
             <label for="registerOptin" class="text-small label-checkbox">{{ 'shopify.checkout.marketing.accept_marketing_checkbox_label' | t }}</label>
           </div>
+
+          <!-- CUSTOM: Pcivacy policy and terms of use agreement notes-->
+          <div>
+            <p>By creating an account, you agree to Bivvy Fun's <a href="https://bivvyfun.com/policies/privacy-policy">Privacy Policy</a> and <a href="https://bivvyfun.com/policies/terms-of-service">Terms of Service</a>.</p>
+          </div>
           
           <button type="submit" class="btn btn--primary full">
             <span class="btn__text">
