Policy agreement styling on sign up page.

--- a/templates/customers/register.liquid
+++ b/templates/customers/register.liquid
@@ -73,9 +73,9 @@
 
           <!-- CUSTOM: Pcivacy policy and terms of use agreement notes-->
           <div>
-            <p>By creating an account, you agree to Bivvy Fun's <a href="https://bivvyfun.com/policies/privacy-policy">Privacy Policy</a> and <a href="https://bivvyfun.com/policies/terms-of-service">Terms of Service</a>.</p>
+            <p class="text-small">By creating an account, you agree to Bivvy Fun's <a href="https://bivvyfun.com/policies/privacy-policy" style="text-decoration: underline;">Privacy Policy</a> and <a href="https://bivvyfun.com/policies/terms-of-service" style="text-decoration: underline;">Terms of Service</a>.</p>
           </div>
-          
+
           <button type="submit" class="btn btn--primary full">
             <span class="btn__text">
               {{ 'customer.register.submit' | t }}
