Comments to note the custo code.

--- a/templates/customers/register.liquid
+++ b/templates/customers/register.liquid
@@ -75,6 +75,7 @@
           <div>
             <p class="text-small">By creating an account, you agree to Bivvy Fun's <a href="https://bivvyfun.com/policies/privacy-policy" style="text-decoration: underline;">Privacy Policy</a> and <a href="https://bivvyfun.com/policies/terms-of-service" style="text-decoration: underline;">Terms of Service</a>.</p>
           </div>
+          <!-- ENDCUSTOM -->
 
           <button type="submit" class="btn btn--primary full">
             <span class="btn__text">
