--- a/templates/customers/register.liquid
+++ b/templates/customers/register.liquid
@@ -3,7 +3,7 @@
   <div class="wrapper">
 
     <div class="grid">
-      <div class="grid__item large--six-twelfths" style="align-items: center">
+      <div class="grid__item large--four-twelfths push--large--two-twelfths" style="display: flex; align-items: center;">
         <div class="section-header">
           <div class="page-title-wrapper">
             <h1 class="page-title">{{ 'customer.register.title' | t }}</h1>
