Fixed column overflow bug

--- a/templates/customers/register.liquid
+++ b/templates/customers/register.liquid
@@ -10,7 +10,7 @@
           </div>
         </div>
       </div>
-      <div class="grid__item large--six-twelfths">
+      <div class="grid__item large--four-twelfths">
 
         {%- form 'create_customer', class:'form-vertical' -%}
           {%- if form.errors -%}
