Set the cancel button to be inline element.

--- a/templates/customers/addresses.liquid
+++ b/templates/customers/addresses.liquid
@@ -165,7 +165,7 @@
             </p>
 
             <!-- CUSTOM: Cancel button with accent color border -->
-            <button type="button" class="btn btn-outline-primary btn--small full spacer-bottom" onclick="Shopify.CustomerAddress.toggleNewForm();">{{ 'customer.addresses.cancel' | t }}</button>
+            <button type="button" class="btn btn-outline-primary" onclick="Shopify.CustomerAddress.toggleNewForm();">{{ 'customer.addresses.cancel' | t }}</button>
             <!-- ENDCUSTOM -->
             
             {%- comment -%} CUSTOM: Replaced plain cancel button with above
