--- a/templates/customers/addresses.liquid
+++ b/templates/customers/addresses.liquid
@@ -156,7 +156,7 @@
               <label for="address_default_address_new">{{ 'customer.addresses.set_default' | t }}</label>
             </p>
 
-            <p>
+            <p style="display: inline;">
               <button type="submit" class="btn btn--primary">
                 <span class="btn__text">
                   {{ 'customer.addresses.add' | t }}
